# Steam

./: BuildInstaller.bat  CMakeLists.txt  CreateGoldMasterDisk.bat  CreateISO.bat  DepotDownload.bat  Env.bat  GenerateProjectFiles.bat  README.md  game_actions_480.vdf
DepotDownload/: README.md
MasterDisk/: README.md
Steam/: CMakeLists.txt  ReadMe.txt  Resource.h  STEAM.rc  STEAMConfig.cmake  Steam.cpp  Steam.h
Steam/UGC/: UGCDummyData.txt
